--- a/Assembly-CSharp/Assembly-CSharp.csproj
+++ b/Assembly-CSharp/Assembly-CSharp.csproj
@@ -27,40 +27,40 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Anarchy.Custom">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\Anarchy.Custom.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\Anarchy.Custom.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-UnityScript">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\Assembly-UnityScript.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\Assembly-UnityScript.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-UnityScript-firstpass">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\Assembly-UnityScript-firstpass.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\Assembly-UnityScript-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="Boo.Lang">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\Boo.Lang.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\Boo.Lang.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\ICSharpCode.SharpZipLib.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Security">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\Mono.Security.dll</HintPath>
+    <Reference Include="mscorlib">
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\mscorlib.dll</HintPath>
     </Reference>
     <Reference Include="Photon3Unity3D">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\Photon3Unity3D.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\UnityEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\UnityEngine.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityScript.Lang">
-      <HintPath>..\Guardian64\Guardian_Data\Managed\UnityScript.Lang.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\Photon3Unity3D.dll</HintPath>
     </Reference>
     <Reference Include="System.Core">
       <HintPath>..\Guardian64\Guardian_Data\Managed\System.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine">
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\UnityEngine.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\UnityEngine.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityScript.Lang">
+      <HintPath>..\..\..\..\Downloads\Guardian_Data\Managed\UnityScript.Lang.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
